--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@
             display: flex;
             align-items: center;
         }
-        /* Logo Custom Style */
         .custom-navbar-icon {
             height: 1.5rem;
             width: auto;
@@ -148,7 +147,7 @@
             transform: scale(1.02);
         }
 
-        /* New Size Chart Styles (Mobile Friendly) */
+        /* --- New Optimized Size Chart Styles --- */
         .nav-pills .nav-link {
             color: var(--text-color);
             background-color: #f0f0f0;
@@ -161,34 +160,31 @@
             background-color: var(--primary-brown);
             color: white;
         }
+        
+        /* ตาราง Size ในมือถือ */
+        .table-size {
+            margin-bottom: 0;
+        }
         .table-size th {
             background-color: var(--light-brown);
             color: var(--dark-brown);
             font-weight: 600;
             border: none;
+            white-space: nowrap; /* ห้ามตัดบรรทัด */
+            padding: 10px 5px;   /* ลดระยะห่าง */
+            font-size: 0.9rem;
         }
         .table-size td {
             border-bottom: 1px solid #eee;
             color: #666;
+            padding: 8px 5px;
+            font-size: 0.9rem;
         }
         .table-size tr:last-child td { border-bottom: none; }
-
-        /* Tables (General) */
-        .table-custom {
-            background: white;
+        .table-responsive {
             border-radius: 12px;
-            overflow: hidden;
-            font-size: 0.95rem;
-            box-shadow: 0 4px 12px rgba(0,0,0,0.05);
             border: 1px solid #eee;
-        }
-        .table-custom thead {
-            background-color: var(--primary-brown);
-            color: white;
-        }
-        .table-custom th, .table-custom td {
-            padding: 12px 8px;
-            vertical-align: middle;
+            overflow-x: auto; /* เลื่อนแนวนอนถ้าจอเล็กมาก */
         }
 
         /* Footer */
@@ -263,20 +259,19 @@
         .dashboard-card i { position: absolute; right: 15px; bottom: 15px; font-size: 3rem; opacity: 0.2; }
 
         /* Responsive Table */
-        .table-responsive { border-radius: 12px; overflow: hidden; box-shadow: 0 4px 15px rgba(0,0,0,0.05); }
         .table-hover tbody tr:hover { background-color: #f9f5f0; }
         
         .status-badge { padding: 5px 12px; border-radius: 20px; font-size: 0.85rem; font-weight: 500; display: inline-block; }
         .status-wait { background-color: #FFF3E0; color: #EF6C00; border: 1px solid #FFE0B2; }
         .status-done { background-color: #E8F5E9; color: #2E7D32; border: 1px solid #C8E6C9; }
 
+        /* Admin Table Mobile View */
         @media (max-width: 768px) {
-            .table-responsive table, .table-responsive thead, .table-responsive tbody, .table-responsive th, .table-responsive td, .table-responsive tr { display: block; }
-            .table-responsive thead tr { position: absolute; top: -9999px; left: -9999px; }
-            .table-responsive tr { background: white; border-radius: 12px; margin-bottom: 15px; box-shadow: 0 2px 8px rgba(0,0,0,0.05); border: 1px solid #eee; padding: 15px; }
-            .table-responsive td { border: none; position: relative; padding: 5px 0; display: flex; justify-content: space-between; align-items: center; border-bottom: 1px dashed #eee; }
-            .table-responsive td:last-child { border-bottom: none; justify-content: flex-end; gap: 10px; margin-top: 10px; }
-            .table-responsive td:before { content: attr(data-label); font-weight: 600; color: var(--dark-brown); font-size: 0.9rem; }
+            #dataTableBody tr { background: white; border-radius: 12px; margin-bottom: 15px; box-shadow: 0 2px 8px rgba(0,0,0,0.05); border: 1px solid #eee; padding: 15px; display: block; }
+            #dataTableBody td { border: none; position: relative; padding: 5px 0; display: flex; justify-content: space-between; align-items: center; border-bottom: 1px dashed #eee; }
+            #dataTableBody td:last-child { border-bottom: none; justify-content: flex-end; gap: 10px; margin-top: 10px; }
+            #dataTableBody td:before { content: attr(data-label); font-weight: 600; color: var(--dark-brown); font-size: 0.9rem; }
+            #dataTableSection thead { display: none; }
             .mobile-hide { display: none !important; }
         }
 
@@ -296,14 +291,15 @@
     </nav>
 
     <div id="mainCarousel" class="carousel slide mt-5 pt-3" data-bs-ride="carousel" data-bs-interval="3000">
-        <div class="carousel-indicators">
+      <div class="carousel-indicators">
             <button type="button" data-bs-target="#mainCarousel" data-bs-slide-to="0" class="active"></button>
             <button type="button" data-bs-target="#mainCarousel" data-bs-slide-to="1"></button>
             <button type="button" data-bs-target="#mainCarousel" data-bs-slide-to="2"></button>
             <button type="button" data-bs-target="#mainCarousel" data-bs-slide-to="3"></button>
             <button type="button" data-bs-target="#mainCarousel" data-bs-slide-to="4"></button>
             <button type="button" data-bs-target="#mainCarousel" data-bs-slide-to="5"></button>
-	        <button type="button" data-bs-target="#mainCarousel" data-bs-slide-to="6"></button>
+	    <button type="button" data-bs-target="#mainCarousel" data-bs-slide-to="6"></button>
+
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active"><img src="images/11.jpg" alt="Slide 1" fetchpriority="high"></div>
@@ -312,7 +308,7 @@
             <div class="carousel-item"><img src="images/14.jpg" loading="lazy" alt="Slide 4"></div>
             <div class="carousel-item"><img src="images/15.jpg" loading="lazy" alt="Slide 5"></div>
             <div class="carousel-item"><img src="images/16.jpg" loading="lazy" alt="Slide 6"></div>
-	         <div class="carousel-item"><img src="images/17.jpg" loading="lazy" alt="Slide 6"></div>
+	     <div class="carousel-item"><img src="images/17.jpg" loading="lazy" alt="Slide 7"></div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#mainCarousel" data-bs-slide="prev">
             <span class="carousel-control-prev-icon"></span>
@@ -361,7 +357,7 @@
             <div class="col-12 col-md-4">
                 <div class="product-card">
                     <div class="product-img-box">
-                        <img src="images/23.jpg" loading="lazy" alt="ชุดคอมโบ">
+                        <img src="images/23.JPG" loading="lazy" alt="ชุดคอมโบ">
                     </div>
                     <div class="card-body">
                         <h4 class="fw-bold">ชุดคอมโบ (เสื้อ+แก้ว)</h4>
@@ -375,7 +371,7 @@
     </div>
 
     <div class="container pb-5">
-        <div class="bg-white p-4 rounded-4 shadow-sm">
+        <div class="bg-white p-4 p-md-5 rounded-4 shadow-sm">
             <h3 class="text-center fw-bold mb-3" style="color: var(--dark-brown);">ตาราง Size (Size Chart)</h3>
             <p class="text-center text-muted mb-4">เลือก Size ที่เหมาะสมกับคุณ</p>
 
@@ -392,7 +388,9 @@
                 <div class="tab-pane fade show active" id="adult" role="tabpanel">
                     <div class="table-responsive">
                         <table class="table text-center table-size">
-                            <thead><tr><th>Size</th><th>อก (นิ้ว)</th><th>ยาว (นิ้ว)</th></tr></thead>
+                            <thead>
+                                <tr><th>Size</th><th>รอบอก (นิ้ว)</th><th>ความยาว (นิ้ว)</th></tr>
+                            </thead>
                             <tbody>
                                 <tr><td>SS</td><td>36"</td><td>26"</td></tr>
                                 <tr><td>S</td><td>38"</td><td>27"</td></tr>
@@ -412,7 +410,9 @@
                 <div class="tab-pane fade" id="junior" role="tabpanel">
                     <div class="table-responsive">
                         <table class="table text-center table-size">
-                            <thead><tr><th>Size</th><th>อก (นิ้ว)</th><th>ยาว (นิ้ว)</th></tr></thead>
+                            <thead>
+                                <tr><th>Size</th><th>รอบอก (นิ้ว)</th><th>ความยาว (นิ้ว)</th></tr>
+                            </thead>
                             <tbody>
                                 <tr><td>2S</td><td>24"</td><td>18"</td></tr>
                                 <tr><td>S</td><td>26"</td><td>19"</td></tr>
@@ -435,8 +435,7 @@
             <span class="d-inline-block mx-3 mb-2"><i class="fas fa-phone-alt text-brown"></i> กัปตัน: <a href="tel:0969808374" class="fw-bold text-dark text-decoration-none">096-980-8374</a></span>
         </div>
         <div class="action-buttons">
-            <span class="btn-link-custom" onclick="openPublicView()"><i class="fas fa-list-alt"></i> ดูสถานะคำสั่งซื้อ</span>
-            <span class="btn-link-custom" onclick="openAdminLogin()"><i class="fas fa-user-cog"></i> ผู้ดูแลระบบ (Admin)</span>
+            <span class="btn-link-custom" onclick="openAdminLogin()"><i class="fas fa-user-shield"></i> ผู้ดูแลระบบ (Admin)</span>
         </div>
     </div>
 
@@ -489,7 +488,7 @@
                                 <span class="fs-5 fw-bold text-primary">679-3-95520-9</span>
                             </div>
                             <br>
-                            <img src="images/qr.jpg" alt="QR Code" style="width: 150px; border-radius: 8px; border: 1px solid #ddd;">
+                            <img src="images/88.jpg" alt="QR Code" style="width: 150px; border-radius: 8px; border: 1px solid #ddd;">
                         </div>
 
                         <div class="mb-3">
