--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
             <div class="carousel-item active"><img src="images/11.jpg" alt="Slide 1" fetchpriority="high"></div>
             <div class="carousel-item"><img src="images/12.jpg" loading="lazy" alt="Slide 2"></div>
             <div class="carousel-item"><img src="images/13.jpg" loading="lazy" alt="Slide 3"></div>
-            <div class="carousel-item"><img src="images/14.jpg" loading="lazy" alt="Slide 4"></div>
+            <div class="carousel-item"><img src="images/14.png" loading="lazy" alt="Slide 4"></div>
             <div class="carousel-item"><img src="images/15.jpg" loading="lazy" alt="Slide 5"></div>
             <div class="carousel-item"><img src="images/16.jpg" loading="lazy" alt="Slide 6"></div>
 	     <div class="carousel-item"><img src="images/17.jpg" loading="lazy" alt="Slide 7"></div>
@@ -921,4 +921,5 @@
         }
     </script>
 </body>
+
 </html>
