--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active" style="height: 60vh;"><img src="images/11.jpg" class="d-block w-100" style="object-fit: cover; height: 100%;" alt="Slide 1"></div>
-            <div class="carousel-item" style="height: 60vh;"><img src="images/12.jpg" class="d-block w-100" style="object-fit: cover; height: 100%;" alt="Slide 2"></div>
+            <div class="carousel-item" style="height: 60vh;"><img src="images/12.JPEG" class="d-block w-100" style="object-fit: cover; height: 100%;" alt="Slide 2"></div>
             <div class="carousel-item" style="height: 60vh;"><img src="images/13.jpg" class="d-block w-100" style="object-fit: cover; height: 100%;" alt="Slide 3"></div>
             <div class="carousel-item" style="height: 60vh;"><img src="images/14.png" class="d-block w-100" style="object-fit: cover; height: 100%;" alt="Slide 4" onerror="this.src='https://via.placeholder.com/1920x1080?text=Image+14'"></div>
             <div class="carousel-item" style="height: 60vh;"><img src="images/15.jpg" class="d-block w-100" style="object-fit: cover; height: 100%;" alt="Slide 5" onerror="this.src='https://via.placeholder.com/1920x1080?text=Image+15'"></div>
@@ -167,7 +167,7 @@
 
             <div class="col-12 col-md-4" data-aos="fade-up" data-aos-delay="300">
                 <div class="product-card">
-                    <div class="product-img-box"><img src="images/23.jpg" alt="ชุดคอมโบ" onerror="this.src='https://via.placeholder.com/600x600?text=No+Image'"></div>
+                    <div class="product-img-box"><img src="images/23.JPG" alt="ชุดคอมโบ" onerror="this.src='https://via.placeholder.com/600x600?text=No+Image'"></div>
                     <div class="card-body">
                         <div><h4 class="fw-bold">ชุดคอมโบ (เสื้อ+แก้ว)</h4><p class="text-brown fs-3 fw-bold mb-3">699.-</p></div>
                         <div class="row g-2 w-100 mx-auto">
