--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
             <div class="carousel-item" style="height: 60vh;"><img src="images/13.jpg" class="d-block w-100" style="object-fit: cover; height: 100%;" alt="Slide 3"></div>
             <div class="carousel-item" style="height: 60vh;"><img src="images/14.png" class="d-block w-100" style="object-fit: cover; height: 100%;" alt="Slide 4" onerror="this.src='images/14.png'"></div>
             <div class="carousel-item" style="height: 60vh;"><img src="images/15.jpg" class="d-block w-100" style="object-fit: cover; height: 100%;" alt="Slide 5"></div>
-            <div class="carousel-item" style="height: 60vh;"><img src="images/16.jpg" class="d-block w-100" style="object-fit: cover; height: 100%;" alt="Slide 6"></div>
-            <div class="carousel-item" style="height: 60vh;"><img src="images/17.jpg" class="d-block w-100" style="object-fit: cover; height: 100%;" alt="Slide 7"></div>
+            <div class="carousel-item" style="height: 60vh;"><img src="images/16.JPG" class="d-block w-100" style="object-fit: cover; height: 100%;" alt="Slide 6"></div>
+            <div class="carousel-item" style="height: 60vh;"><img src="images/17.JPG" class="d-block w-100" style="object-fit: cover; height: 100%;" alt="Slide 7"></div>
             <div class="carousel-item" style="height: 60vh;"><img src="images/18.jpg" class="d-block w-100" style="object-fit: cover; height: 100%;" alt="Slide 8"></div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#mainCarousel" data-bs-slide="prev"><span class="carousel-control-prev-icon"></span></button>
@@ -549,3 +549,4 @@
 </body>
 
 </html>
+
