--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                             <div id="paymentSection">
                                 <hr>
                                 <div class="bg-white p-3 border rounded d-inline-block mt-2 shadow-sm">
-                                    <h6 class="text-secondary">ธนาคารกรุงไทย</h6><h5 class="fw-bold">นายณรรถภพ สราญรมย์</h5><h4 class="text-primary fw-bold my-2">679-3-95520-9</h4>
+                                    <h6 class="text-secondary">ธนาคารทหารไทยธนชาต</h6><h5 class="fw-bold">นายณรรถภพ สราญรมย์</h5><h4 class="text-primary fw-bold my-2">496-2-32874-8</h4>
                                     <img src="images/qr.jpg" alt="QR Code" style="width: 280px; border: 1px solid #ddd; border-radius: 8px;">
                                 </div>
                                 <div class="mt-3"><label class="text-danger small fw-bold">* แนบสลิปการโอนเงิน</label><input type="file" id="slipFile" class="form-control mt-1" accept="image/*"></div>
@@ -549,6 +549,7 @@
 </body>
 
 </html>
+
 
 
 
